--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
+    "@types/qrcode": "^1.4.2",
+    "axios": "^0.27.2",
     "ng-zorro-antd": "^13.2.2",
+    "qrcode": "^1.5.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,6 +39,12 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ts-md5": "^1.2.11",
     "typescript": "~4.6.2"
-  }
+  },
+  "description": "周羽翔新手任务 This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.3.4.",
+  "main": "karma.conf.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
